# aioclashroyale

./: .gitignore  LICENSE  README.md  pyproject.toml
aioclashroyale/: aioclashroyale.py
aioclashroyale/client/: __init__.py  abc.py  aiohttp.py  client.py  route.py  token.py
aioclashroyale/const/: routes.py
aioclashroyale/data/tournaments/: __init__.py  game_mode.py  privacy_type.py  status_type.py  tournament_header.py
aioclashroyale/exceptions/: __init__.py
aioclashroyale/models/dto/: Arena.py  Battle.py  Challenge.py  ChallengeChain.py  ChallengeGameMode.py  Chest.py  Clan.py  ClanMember.py  ClanRanking.py  ClanWarClan.py  ClanWarLog.py  ClanWarParticipant.py  ClanWarStanding.py  CurrentRiverRace.py  Cursors.py  File.py  FingerPrint.py  GameMode.py  IconUrls.py  Item.py  Items.py  LadderTournament.py  LadderTournamentRanking.py  Leaderboard.py  LeagueSeason.py  LeagueSeasonResult.py  LeagueSeasonV2.py  Location.py  PaginatedList.py  Paging.py  PathOfLegendSeasonResult.py  PeriodLog.py  PeriodLogEntry.py  PeriodLogEntryClan.py  Player.py  PlayerAchievementBadge.py  PlayerAchievementProgress.py  PlayerBattleData.py  PlayerBattleRound.py  PlayerClan.py  (+15 more)
aioclashroyale/models/enum/: BattleType.py  ChallengeType.py  ClanChestStatus.py  ClanRole.py  ClanType.py  CurrentRiverRaceState.py  DeckSelection.py  PeriodType.py  PlayerItemLevelRarity.py  SurvivalMilestoneRewardResource.py  SurvivalMilestoneRewardType.py  TournamentStatus.py  __init__.py  (+1 more)
aioclashroyale/types/: __init__.py  non_required_param.py  nonrequiredparam.py  paramlist.py
tests/: route_test.py
