[project]
name = "aioclashroyale"
version = "0.1.0"
description = ""
authors = [
    {name = "TallSmaN1",email = "coffi435@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgspec (>=0.19.0,<0.20.0)",
    "envparse (>=0.2.0,<0.3.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "pretty-errors (>=1.2.25,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
